--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,6 +8,7 @@ rules:
   no-console: off
   no-else-return: off
   no-nested-ternary: off
+  no-return-assign: off
   no-plusplus:
     - error
     - allowForLoopAfterthoughts: true
