--- a/lib/function/package.json
+++ b/lib/function/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "node-minify --compressor terser --input 'index.js' --output 'dist/index.min.js'",
     "package": "npm run build && node ../../package.js && cp README.md dist/",
-    "unit": "../node_modules/.bin/mocha index.js",
-    "lint": "../node_modules/.bin/eslint *.js",
+    "unit": "../../node_modules/.bin/mocha *.spec.js",
+    "lint": "../../node_modules/.bin/eslint *.js",
     "test": "npm run lint && npm run unit",
-    "deploy": "npm run build && cd dist && npm publish"
+    "deploy": "npm run build && npm test && cd dist && npm publish"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
   "license": "MIT",
