--- a/lib/function/package.json
+++ b/lib/function/package.json
@@ -11,7 +11,7 @@
     "unit": "../../node_modules/.bin/mocha *.spec.js",
     "lint": "../../node_modules/.bin/eslint *.js",
     "test": "npm run lint && npm run unit",
-    "deploy": "npm run build && npm test && cd dist && npm publish"
+    "deploy": "npm run build && npm test && cd dist && npm publish --access public"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
   "license": "MIT",
