--- a/lib/type/package.json
+++ b/lib/type/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@sullux/fp-light-type",
-  "version": "0.0.1",
-  "engines": { "node": ">=8.*" },
+  "version": "0.0.3",
+  "engines": {
+    "node": ">=8.*"
+  },
   "description": "A lightweight functional library for functional composition and object composition.",
-  "keywords": ["fp", "functional", "type"],
+  "keywords": [
+    "fp",
+    "functional",
+    "type"
+  ],
   "main": "index.min.js",
   "unpkg": "index.min.js",
   "scripts": {
