--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "engines": {
     "node": ">=8.*"
   },
-  "description": "A lightweight functional library for functional composition and object composition.",
+  "description": "A lightweight library to support functional programming in javascript.",
   "keywords": [
     "fp",
     "functional"
   ],
   "main": "index.js",
   "scripts": {
+    "build": "./node_modules/.bin/webpack --config webpack.config.js",
+    "package": "npm run build && node ./package.js && cp README.md dist/",
+    "unit": "./node_modules/.bin/mocha ./lib/**/*.spec.js",
+    "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
+    "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
     "test": "npm run lint && npm run unit",
-    "unit": "./node_modules/.bin/mocha test/**/*.spec.js",
-    "lint": "./node_modules/.bin/eslint **/*.js"
+    "deploy": "npm test && npm run package && cd dist && npm publish --access public"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
   "license": "MIT",
@@ -21,9 +25,11 @@
   "homepage": "https://github.com/Sullux/fp-light/blob/master/README.md",
   "dependencies": {},
   "devDependencies": {
-    "@node-minify/uglify-js": "^4.0.5",
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.14.1",
     "mocha": "^6.0.2",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
   }
 }
