--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sullux/fp-light",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": {
     "node": ">=8.*"
   },
@@ -17,7 +17,7 @@
     "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
     "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
     "test": "npm run lint && npm run unit",
-    "deploy": "npm test && npm run package && cd dist && npm publish --access public"
+    "deploy": "npm run unit && npm run package && cd dist && npm publish --access public"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
   "license": "MIT",
