--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -149,9 +149,7 @@ rules:
     - object: Math
       property: pow
       message: Use the exponentiation operator (**) instead.
-  no-return-assign:
-    - error
-    - always
+  no-return-assign: off
   no-return-await: error
   no-script-url: error
   no-self-assign: error
