rewrite autodoc tests

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-eslint": "^10.0.1",
     "chalk": "^2.4.2",
     "eslint": "^5.14.1",
-    "esprima": "^4.0.1",
+    "espree": "^7.1.0",
     "js-yaml": "^3.13.1",
     "vlq": "^1.0.1",
     "webpack": "^4.29.5",
