--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --config webpack.config.js && cp dist/*.md ./ && node ./package.js",
+    "build": "./node_modules/.bin/webpack --config webpack.config.js && cp *.md dist/ && node ./package.js",
     "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
     "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
     "deploy": "yarn build && cd dist && npm publish --access public"
