--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sullux/fp-light",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "engines": {
     "node": ">=10.*"
   },
@@ -14,6 +14,7 @@
     "build": "./node_modules/.bin/webpack --config webpack.config.js && cp README.md dist/ && node ./package.js",
     "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
     "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
+    "test": "yarn jest",
     "deploy": "yarn build && cd dist && npm publish --access public"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
@@ -22,10 +23,13 @@
   "homepage": "https://github.com/Sullux/fp-light/blob/master/README.md",
   "dependencies": {},
   "devDependencies": {
+    "@babel/preset-env": "^7.13.10",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "chalk": "^2.4.2",
     "eslint": "^5.14.1",
     "espree": "^7.1.0",
+    "jest": "^26.6.3",
     "js-yaml": "^3.13.1",
     "vlq": "^1.0.1",
     "webpack": "^4.29.5",
