--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@sullux/fp-light",
-  "version": "1.2.31",
+  "version": "2.0.0",
   "engines": {
-    "node": ">=10.*"
+    "node": ">=12.*"
   },
   "description": "A lightweight library to support functional programming in javascript.",
   "keywords": [
@@ -12,18 +12,38 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "(rm -rf dist || 0) && mkdir dist && rollup -c && cp README.md dist/ && node ./scripts/package.js",
-    "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
-    "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
+    "build": "rm -rf dist && mkdir dist && rollup -c && cp README.md dist/ && node ./package.js",
+    "lint": "yarn standardx",
+    "fix": "yarn standardx --fix",
     "test": "node scripts/test --files \"**/*.test.js\" -i \"**/node_modules/**/*\"",
-    "deploy": "yarn build && cd dist && npm publish --access public"
+    "deploy": "yarn build && npm publish dist --access public"
   },
-  "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
+  "author": "Charles Sullivan <sullux@gmail.com> (https://gitlab.com/sullux)",
   "license": "MIT",
   "repository": "sullux/fp-light",
-  "homepage": "https://github.com/Sullux/fp-light/blob/master/README.md",
+  "homepage": "https://gitlab.com/sullux/fp-light/blob/master/README.md",
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "^8.5.0",
-    "rollup": "^2.63.0"
+    "rollup": "^2.53.0",
+    "standardx": "^7.0.0"
+  },
+  "eslintConfig": {
+    "rules": {
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ]
+    },
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2021
+    }
+  },
+  "standardx": {
+    "env": [
+      "jest",
+      "node",
+      "es2021"
+    ]
   }
 }
