--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "functional"
   ],
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "rm -rf dist && mkdir dist && rollup -c && cp README.md dist/ && node ./package.js",
     "lint": "yarn standardx",
     "fix": "yarn standardx --fix",
-    "test": "node scripts/test --files \"**/*.test.js\" -i \"**/node_modules/**/*\"",
+    "test": "jest --verbose --passWithNoTests",
     "deploy": "yarn build && npm publish dist --access public"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://gitlab.com/sullux)",
@@ -24,6 +23,7 @@
   "homepage": "https://gitlab.com/sullux/fp-light/blob/master/README.md",
   "dependencies": {},
   "devDependencies": {
+    "jest": "^28.1.1",
     "rollup": "^2.53.0",
     "standardx": "^7.0.0"
   },
