--- a/package.json
+++ b/package.json
@@ -13,17 +13,37 @@
   "type": "module",
   "scripts": {
     "build": "(rm -rf dist || 0) && mkdir dist && rollup -c && cp README.md dist/ && node ./scripts/package.js",
-    "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
-    "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
-    "test": "node scripts/test --files \"**/*.test.js\" -i \"**/node_modules/**/*\"",
-    "deploy": "yarn build && cd dist && npm publish --access public"
+    "lint": "yarn standardx",
+    "fix": "yarn standardx --fix",
+    "test": "jest --verbose --passWithNoTests",
+    "deploy": "yarn build && npm publish dist --access public"
   },
   "author": "Charles Sullivan <sullux@gmail.com> (https://github.com/Sullux)",
   "license": "MIT",
   "repository": "sullux/fp-light",
   "homepage": "https://github.com/Sullux/fp-light/blob/master/README.md",
   "devDependencies": {
-    "eslint": "^8.5.0",
-    "rollup": "^2.63.0"
+    "jest": "^28.1.1",
+    "rollup": "^2.53.0",
+    "standardx": "^7.0.0"
+  },
+  "eslintConfig": {
+    "rules": {
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ]
+    },
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2021
+    }
+  },
+  "standardx": {
+    "env": [
+      "jest",
+      "node",
+      "es2021"
+    ]
   }
 }
