--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "type": "module",
   "scripts": {
     "build": "(rm -rf dist || 0) && mkdir dist && rollup -c && cp README.md dist/ && node ./scripts/package.js",
-    "lint": "./node_modules/.bin/eslint *.js ./lib/**/*.js",
-    "fix": "./node_modules/.bin/eslint *.js ./lib/**/*.js --fix",
+    "lint": "yarn standardx",
+    "fix": "yarn standardx --fix",
     "test": "node scripts/test --files \"**/*.test.js\" -i \"**/node_modules/**/*\"",
     "deploy": "yarn build && cd dist && npm publish --access public"
   },
@@ -22,8 +22,46 @@
   "license": "MIT",
   "repository": "sullux/fp-light",
   "homepage": "https://github.com/Sullux/fp-light/blob/master/README.md",
+  "standardx": {
+    "env": [
+      "jest",
+      "node",
+      "es2021"
+    ]
+  },
+  "eslintConfig": {
+    "rules": {
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ],
+      "no-nested-ternary": "off",
+      "operator-linebreak": [
+        "error",
+        "after",
+        {
+          "overrides": {
+            "?": "before",
+            ":": "before"
+          }
+        }
+      ],
+      "indent": [
+        "error",
+        2,
+        {
+          "offsetTernaryExpressions": true,
+          "flatTernaryExpressions": true
+        }
+      ]
+    },
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2021
+    }
+  },
   "devDependencies": {
-    "eslint": "^8.5.0",
-    "rollup": "^2.63.0"
+    "rollup": "^2.63.0",
+    "standardx": "^7.0.0"
   }
 }
